tests/NormalTests/paczka1/fuzzy1/36119089.err
Error in line 6: y6QCeF A557 54,0
Error in line 10: y6QCeF A993 69,7
Error in line 39: TLY93csxz1 A30 193,95
